# FLauncherInstaller

./: CMakeLists.txt  localisation.cpp  localisation.h  localisationtype.h  log_system.cpp  log_system.h  main.cpp  python_system.cpp  python_system.h
src/: main.cpp
src/install_entity/: flauncher_find_path_install_entity.cpp  flauncher_find_path_install_entity.h  flauncher_repo_clone_install_entity.cpp  flauncher_repo_clone_install_entity.h  flauncher_shortcut_install_entity.cpp  flauncher_shortcut_install_entity.h  flauncher_update_install_entity.cpp  flauncher_update_install_entity.h  install_entity.cpp  install_entity.h  python_install_entity.cpp  python_install_entity.h
src/install_manager/: install_manager.cpp  install_manager.h
src/localisation_manager/: localisation_manager.cpp  localisation_manager.h  localisation_type.h
src/log_manager/: log_manager.cpp  log_manager.h
src/operation_system_manager/: operation_system_manager.cpp  operation_system_manager.h
src/test/: main.cpp
